{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 35,
  "lineage": "b0ffa6b5-27d8-5180-1750-a16b83d971bd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08aaa04c4db66f00c",
            "arn": "arn:aws:ec2:us-east-1:287416776419:elastic-ip/eipalloc-08aaa04c4db66f00c",
            "domain": "vpc",
            "id": "eipalloc-08aaa04c4db66f00c",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-221-0-6.compute-1.amazonaws.com",
            "public_ip": "3.221.0.6",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ecs-fargate-demo-nat-eip-1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "ecs-fargate-demo-nat-eip-1",
              "Project": "ECS-Fargate-Demo"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dbf03b99b5f23832",
            "arn": "arn:aws:ec2:us-east-1:287416776419:elastic-ip/eipalloc-0dbf03b99b5f23832",
            "domain": "vpc",
            "id": "eipalloc-0dbf03b99b5f23832",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-237-102-242.compute-1.amazonaws.com",
            "public_ip": "34.237.102.242",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ecs-fargate-demo-nat-eip-2"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "ecs-fargate-demo-nat-eip-2",
              "Project": "ECS-Fargate-Demo"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287416776419:internet-gateway/igw-063c0b813fa5f308e",
            "id": "igw-063c0b813fa5f308e",
            "owner_id": "287416776419",
            "tags": {
              "Name": "ecs-fargate-demo-igw"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "ecs-fargate-demo-igw",
              "Project": "ECS-Fargate-Demo"
            },
            "vpc_id": "vpc-036dcc3bc60a97037"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:287416776419:loadbalancer/app/ecs-fargate-demo-alb/0bcc00370b73c91b",
            "arn_suffix": "app/ecs-fargate-demo-alb/0bcc00370b73c91b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecs-fargate-demo-alb-2002386312.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:287416776419:loadbalancer/app/ecs-fargate-demo-alb/0bcc00370b73c91b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-fargate-demo-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-044c640bd3e579bc6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-081fe254a3f10fa04"
              },
              {
                "subnet_id": "subnet-0cd15c7586abc7d55"
              }
            ],
            "subnets": [
              "subnet-081fe254a3f10fa04",
              "subnet-0cd15c7586abc7d55"
            ],
            "tags": {
              "Name": "ecs-fargate-demo-alb"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "ecs-fargate-demo-alb",
              "Project": "ECS-Fargate-Demo"
            },
            "vpc_id": "vpc-036dcc3bc60a97037",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:287416776419:listener/app/ecs-fargate-demo-alb/0bcc00370b73c91b/a38737a3296ade0d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:287416776419:targetgroup/ecs-fargate-demo-tg/06cc29dab4c79fdd",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:287416776419:listener/app/ecs-fargate-demo-alb/0bcc00370b73c91b/a38737a3296ade0d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:287416776419:loadbalancer/app/ecs-fargate-demo-alb/0bcc00370b73c91b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Project": "ECS-Fargate-Demo"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.main",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:287416776419:targetgroup/ecs-fargate-demo-tg/06cc29dab4c79fdd",
            "arn_suffix": "targetgroup/ecs-fargate-demo-tg/06cc29dab4c79fdd",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:287416776419:targetgroup/ecs-fargate-demo-tg/06cc29dab4c79fdd",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecs-fargate-demo-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ecs-fargate-demo-tg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "ecs-fargate-demo-tg",
              "Project": "ECS-Fargate-Demo"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-036dcc3bc60a97037"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08aaa04c4db66f00c",
            "association_id": "eipassoc-04aaa817ed4f001f5",
            "connectivity_type": "public",
            "id": "nat-006e18dfb4191e31c",
            "network_interface_id": "eni-0ab8b6370b07ba905",
            "private_ip": "10.0.0.231",
            "public_ip": "3.221.0.6",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0cd15c7586abc7d55",
            "tags": {
              "Name": "ecs-fargate-demo-nat-1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "ecs-fargate-demo-nat-1",
              "Project": "ECS-Fargate-Demo"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dbf03b99b5f23832",
            "association_id": "eipassoc-044aadf42362089e8",
            "connectivity_type": "public",
            "id": "nat-08eac2752b7b43fa6",
            "network_interface_id": "eni-07e5d48ac2af57b73",
            "private_ip": "10.0.1.163",
            "public_ip": "34.237.102.242",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-081fe254a3f10fa04",
            "tags": {
              "Name": "ecs-fargate-demo-nat-2"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "ecs-fargate-demo-nat-2",
              "Project": "ECS-Fargate-Demo"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287416776419:route-table/rtb-0bc1254f6cf460428",
            "id": "rtb-0bc1254f6cf460428",
            "owner_id": "287416776419",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-006e18dfb4191e31c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecs-fargate-demo-private-rt-1"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "ecs-fargate-demo-private-rt-1",
              "Project": "ECS-Fargate-Demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-036dcc3bc60a97037"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287416776419:route-table/rtb-036fba6fd5f293ce3",
            "id": "rtb-036fba6fd5f293ce3",
            "owner_id": "287416776419",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08eac2752b7b43fa6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecs-fargate-demo-private-rt-2"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "ecs-fargate-demo-private-rt-2",
              "Project": "ECS-Fargate-Demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-036dcc3bc60a97037"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287416776419:route-table/rtb-0c26bbe01694ba912",
            "id": "rtb-0c26bbe01694ba912",
            "owner_id": "287416776419",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-063c0b813fa5f308e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ecs-fargate-demo-public-rt"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "ecs-fargate-demo-public-rt",
              "Project": "ECS-Fargate-Demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-036dcc3bc60a97037"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019725ae4a3fd06cd",
            "route_table_id": "rtb-0bc1254f6cf460428",
            "subnet_id": "subnet-0a26634bef0922b22"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3f26e2e2d051f29",
            "route_table_id": "rtb-036fba6fd5f293ce3",
            "subnet_id": "subnet-077c825cfc9ac23d6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08799fb6f7cae0cc4",
            "route_table_id": "rtb-0c26bbe01694ba912",
            "subnet_id": "subnet-0cd15c7586abc7d55"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a0d6b7224d5a5850",
            "route_table_id": "rtb-0c26bbe01694ba912",
            "subnet_id": "subnet-081fe254a3f10fa04"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287416776419:security-group/sg-044c640bd3e579bc6",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-044c640bd3e579bc6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-fargate-demo-alb-sg",
            "name_prefix": "",
            "owner_id": "287416776419",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-fargate-demo-alb-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "ecs-fargate-demo-alb-sg",
              "Project": "ECS-Fargate-Demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-036dcc3bc60a97037"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287416776419:security-group/sg-0330c11214e099684",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0330c11214e099684",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-044c640bd3e579bc6"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-fargate-demo-ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "287416776419",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs-fargate-demo-ecs-tasks-sg"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "ecs-fargate-demo-ecs-tasks-sg",
              "Project": "ECS-Fargate-Demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-036dcc3bc60a97037"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287416776419:subnet/subnet-0a26634bef0922b22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a26634bef0922b22",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "287416776419",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs-fargate-demo-private-subnet-1",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "ecs-fargate-demo-private-subnet-1",
              "Project": "ECS-Fargate-Demo",
              "Type": "Private"
            },
            "vpc_id": "vpc-036dcc3bc60a97037"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287416776419:subnet/subnet-077c825cfc9ac23d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-077c825cfc9ac23d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "287416776419",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs-fargate-demo-private-subnet-2",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "ecs-fargate-demo-private-subnet-2",
              "Project": "ECS-Fargate-Demo",
              "Type": "Private"
            },
            "vpc_id": "vpc-036dcc3bc60a97037"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287416776419:subnet/subnet-0cd15c7586abc7d55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd15c7586abc7d55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "287416776419",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs-fargate-demo-public-subnet-1",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "ecs-fargate-demo-public-subnet-1",
              "Project": "ECS-Fargate-Demo",
              "Type": "Public"
            },
            "vpc_id": "vpc-036dcc3bc60a97037"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287416776419:subnet/subnet-081fe254a3f10fa04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081fe254a3f10fa04",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "287416776419",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ecs-fargate-demo-public-subnet-2",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "ecs-fargate-demo-public-subnet-2",
              "Project": "ECS-Fargate-Demo",
              "Type": "Public"
            },
            "vpc_id": "vpc-036dcc3bc60a97037"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:287416776419:vpc/vpc-036dcc3bc60a97037",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ab0f8fd29a4e885c",
            "default_route_table_id": "rtb-0211bd598816208f7",
            "default_security_group_id": "sg-02068540e71cdd93e",
            "dhcp_options_id": "dopt-0b1a5077df98e148a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-036dcc3bc60a97037",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0211bd598816208f7",
            "owner_id": "287416776419",
            "tags": {
              "Name": "ecs-fargate-demo-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "ecs-fargate-demo-vpc",
              "Project": "ECS-Fargate-Demo"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}